--- a/css/style.css
+++ b/css/style.css
@@ -6361,6 +6361,9 @@ iframe.uk-cover {
 	color: #50007d;
 	font-weight: 400;
 }
+.mkt img {
+	width: 84px;
+}
   /*-------------------------SLIDER----------------------------*/
 
 body{
@@ -6416,3 +6419,4 @@ a{
     /*----------- SLIDER --------------*/
 }
 /*------------------------------ NEW --------------------------*/
+
